[gd_scene load_steps=10 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://Images/Shapes/3.0/1.png" type="Texture" id=2]
[ext_resource path="res://Images/Shapes/1.png" type="Texture" id=3]
[ext_resource path="res://Images/Shapes/3.0/Test.png" type="Texture" id=4]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.3727, 68.5378 )

[sub_resource type="Animation" id=3]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Holder/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Holder:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Flashing"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Holder/Highlight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.560784 ), Color( 0, 0, 0, 0.560784 ) ]
}

[node name="Node" type="Area2D"]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 1 )

[node name="Holder" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Holder"]
visible = false
modulate = Color( 0, 0, 0, 0.4 )
position = Vector2( -0.0905202, 6.92614 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="Selector" type="Sprite" parent="Holder"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1.13809, 1.13809 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Holder"]
modulate = Color( 0.345098, 1, 0.741176, 1 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[node name="Highlight" type="Sprite" parent="Holder"]
visible = false
modulate = Color( 1, 0.937255, 0.815686, 1 )
position = Vector2( 0, -0.251041 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Holder"]
margin_left = -65.0
margin_top = -66.0
margin_right = 65.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 64.9893, 66.0582 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "1"
align = 1
valign = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="MoveTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Add = SubResource( 3 )
anims/Flashing = SubResource( 4 )

[connection signal="input_event" from="." to="." method="_on_Node_input_event"]
